// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card renders pipeline body 1`] = `
<DocumentFragment>
  <div
    class="test-class card"
  >
    <div
      class="card-header"
    >
      Test Heading of Card
    </div>
    <div
      class="card-body"
    >
      <div
        class="h-100"
        data-block-id="@pixiebrix/markdown"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`card renders text body 1`] = `
<DocumentFragment>
  <div
    class="test-class card"
  >
    <div
      class="card-header"
    >
      Test Heading of Card
    </div>
    <div
      class="card-body"
    >
      Test body of card
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders grid 1`] = `
<DocumentFragment>
  <div
    class="text-primary container"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <h1>
          Header
        </h1>
      </div>
    </div>
    <div
      class="mt-5 row"
    >
      <div
        class="p-3 col"
      >
        <p>
          left column
        </p>
      </div>
      <div
        class="p-5 col"
      >
        <p>
          right column
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
